--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,8 @@
-Flask==2.0.1
-Werkzeug==2.0.1
-flask-cors==3.0.10
-numpy>=1.21.0
-pandas>=1.3.0
-geopandas>=0.9.0
-shapely>=1.7.1
+Flask
+Werkzeug
+flask-cors
+numpy
+pandas
+geopandas
+shapely
+joblib
